docs-archive/apache-airflow-providers-google/21.1.0/_sources/_api/tests/system/google/cloud/dataform/example_dataform/index.rst.txt
tests.system.google.cloud.dataform.example_dataform
===================================================

.. py:module:: tests.system.google.cloud.dataform.example_dataform

.. autoapi-nested-parse::

   Example Airflow DAG for Google Cloud Dataform service



Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.dataform.example_dataform.ENV_ID
   tests.system.google.cloud.dataform.example_dataform.PROJECT_ID
   tests.system.google.cloud.dataform.example_dataform.DAG_ID
   tests.system.google.cloud.dataform.example_dataform.REPOSITORY_ID
   tests.system.google.cloud.dataform.example_dataform.REGION
   tests.system.google.cloud.dataform.example_dataform.WORKSPACE_ID
   tests.system.google.cloud.dataform.example_dataform.DATAFORM_SCHEMA_NAME
   tests.system.google.cloud.dataform.example_dataform.make_repository
   tests.system.google.cloud.dataform.example_dataform.test_run


Module Contents
---------------

.. py:data:: ENV_ID

.. py:data:: PROJECT_ID

.. py:data:: DAG_ID
   :value: 'dataform'


.. py:data:: REPOSITORY_ID

.. py:data:: REGION
   :value: 'us-central1'


.. py:data:: WORKSPACE_ID

.. py:data:: DATAFORM_SCHEMA_NAME

.. py:data:: make_repository

.. py:data:: test_run

